# LearnOpenGL

./: CMakeLists.txt  Goals.txt  README.md  Rebuild.bat  Recompile.bat  readMe.txt
include/glad/: glad.h
src/: glad.c  main.cpp
